--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 *.iml
 .gradle
 /local.properties
+.idea
+.idea/gradle.xml
+.idea/misc.xml
+/.idea/*
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
