--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
@@ -41,6 +41,6 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug
-          path: app/build/outputs/apk/debug/app-debug-${{ env.VERSION_NAME }}.apk
+          name: app-debug-${{ env.VERSION_NAME }}
+          path: app/build/outputs/apk/debug/app-debug.apk
           retention-days: 2
