--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -41,6 +41,6 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: ilseon-debug-${{ env.VERSION_NAME }}
-          path: app/build/outputs/apk/debug/ilseon-debug.apk
+          name: app-debug-${{ env.VERSION_NAME }}
+          path: app/build/outputs/apk/debug/app-debug.apk
           retention-days: 2
