--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ Project Specification-1.0.md
 
 # Local properties (sensitive data)
 local.properties
-keystore.properties
+app/keystore.properties
 
 # Keystore files (very sensitive)
 app/ilseon-keystore.jks
