--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -49,7 +49,7 @@ jobs:
           name: app-debug-${{ env.VERSION_NAME }}
           path: app/build/outputs/apk/debug/app-debug.apk
           retention-days: 2
-
+# Do a signed release
   release:
     needs: build
     if: startsWith(github.ref, 'refs/tags/v')
