--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -94,3 +94,11 @@ jobs:
           name: app-release-${{ env.VERSION_NAME }}
           path: app/build/outputs/bundle/release/app-release.aab
           retention-days: 9
+
+      - name: Upload to Google Play
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.PLAY_STORE_SERVICE_ACCOUNT_JSON }}
+          packageName: com.ilseon
+          releaseFiles: app/build/outputs/bundle/release/app-release.aab
+          track: internal
