--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -103,6 +103,6 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonPlainText: ${{ secrets.PLAY_STORE_SERVICE_ACCOUNT_JSON }}
-          packageName: com.cladam.ilseon
+          packageName: ilseon
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: internal
