--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -60,6 +60,8 @@ jobs:
           echo "github.repository=${{ github.repository }}"
           echo "github.repository_owner=${{ github.repository_owner }}"
           echo "github.event_name=${{ github.event_name }}"
+      - name: Print package name (not secret)
+        run: echo "packageName=com.ilseon"
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -103,6 +105,6 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonPlainText: ${{ secrets.PLAY_STORE_SERVICE_ACCOUNT_JSON }}
-          packageName: ilseon
+          packageName: com.ilseon
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: internal
