--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -108,3 +108,4 @@ jobs:
           packageName: com.ilseon
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: internal
+          status: draft
